# discord-tray

./: .gitignore  Makefile.am  README.md  configure.ac  discord-tray.desktop.in  discord-tray.spec.in  thunderbird-tray.desktop  thunderbird-tray.spec  thunderbird-tray.spec.in
src/: Makefile.am  main.c  tray_status_icon.c  tray_status_icon.h  winctrl.c
